# cucumber-expressions

./: .eslintrc.json  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  default.mk
.github/: renovate.json
.github/workflows/: codeql-dotnet.yaml  codeql-go.yaml  codeql-java.yaml  codeql-javascript.yaml  codeql-python.yaml  codeql-ruby.yaml  go.yml  java.yml  javascript.yml  new-issues.yml  release-dotnet.yml  release-github.yaml  release-go.yml  release-mvn.yml  release-npm.yml  release-nuget.yaml  release-pypi.yaml  release-python.yml  release-rubygem.yml  release.yaml  ruby.yml  stryker-javascript.yaml  stryker-javascript.yml  test-dart.yml  test-dotnet.yml  test-elixir.yml  test-go.yaml  test-go.yml  test-java.yml  test-javascript.yml  test-python.yaml  test-python.yml  test-ruby.yaml  test-ruby.yml  zizmor-analysis.yaml
dart/: .gitignore  .pubignore  CHANGELOG.md  CONTRIBUTING.md  README.md  analysis_options.yaml  pubspec.yaml
dart/example/: main.dart
dart/lib/: cucumber_expressions.dart
dart/test/: argument_test.dart  combinatorial_generated_expression_factory_test.dart  cucumber_expression_generator_test.dart  cucumber_expression_parser_test.dart  cucumber_expression_test.dart  cucumber_expression_tokenizer_test.dart  cucumber_expression_transformation_test.dart  custom_parameter_type_test.dart  expression_factory_test.dart  parameter_type_registry_test.dart  parameter_type_test.dart  public_api_test.dart  regular_expression_test.dart  tree_regexp_test.dart
docs/: index.html  index.js  index.js.map  style.css
dotnet/: .gitignore  CucumberExpressions.sln  CucumberExpressions.sln.DotSettings  README.md
dotnet/CucumberExpressions.Tests/: CombinatorialGeneratedExpressionFactoryTest.cs  CucumberExpressionGeneratorTest.cs  CucumberExpressionParserTest.cs  CucumberExpressionTest.cs  CucumberExpressionTestBase.cs  CucumberExpressionTokenizerTest.cs  CucumberExpressionTokenizerTest.java  (+6 more)
elixir/: .formatter.exs  .gitignore  Makefile  PLAN.md  README.md  mix.exs
go/: .gitignore  Makefile  README.md  ast.go  cucumber_expression_generator_test.go  cucumber_expression_parser_test.go  cucumber_expression_test.go  cucumber_expression_tokenizer_test.go  cucumber_expression_transformation_test.go  custom_parameter_type_test.go  errors.go  expression_examples_test.go  go.mod  go.sum  parameter_by_type_transformer.go  parameter_by_type_transformer_test.go  parameter_type_registry.go  regular_expression_test.go
java/: pom.xml
javascript/: .eslintrc.js  .eslintrc.json  .gitignore  .mocharc.json  .npmrc  README.md  biome.json  eslint.config.mjs  package-lock.json  package.json  stryker.conf.json  tailwind.config.cjs  the-plan.md  tsconfig.build-cjs.json  tsconfig.build-esm.json  tsconfig.build-try.json  tsconfig.build.json  tsconfig.json
python/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
python/Cucumber/CucumberExpressions/: argument.py  combinatorial_generated_expression_factory.py  cucumber_expression.py  cucumber_expression_generator.py  cucumber_expression_parser.py  cucumber_expression_tokenizer.py  definitions.py  expression_factory.py  group_builder.py  parameter_type.py  parameter_type_matcher.py  parameter_type_registry.py  regular_expression.py  tree_regexp.py
python/Cucumber/CucumberExpressions/exceptions/: errors.py
python/Cucumber/CucumberExpressions/test/: conftest.py  test_argument.py  test_combinatorial_generated_expression_factory.py  test_cucumber_expression.py  test_cucumber_expression_generator.py  test_cucumber_expression_parser.py  test_cucumber_expression_tokenizer.py  test_cucumber_expression_transformation.py  test_custom_parameter_type.py  test_expression_factory.py  test_parameter_type_registry.py  test_regular_expression.py  test_tree_regex.py
python/cucumber_expressions/: argument.py  ast.py  combinatorial_generated_expression_factory.py  cucumber_expression.py  cucumber_expression_generator.py  cucumber_expression_parser.py  cucumber_expression_tokenizer.py  errors.py  expression.py  expression_factory.py  expression_generator.py  expression_parser.py  expression_tokenizer.py  generated_expression.py  group.py  group_builder.py  parameter_type.py  parameter_type_matcher.py  parameter_type_registry.py  regular_expression.py  tree_regexp.py
python/src/cucumber_expressions/: argument.py  ast.py  combinatorial_generated_expression_factory.py  errors.py  expression.py  expression_generator.py  expression_parser.py  group.py  group_builder.py  parameter_type.py  parameter_type_registry.py  regular_expression.py
python/test/: README.md  conftest.py  requirements.txt  test_cucumber_expression.py  test_cucumber_expression_generator.py  test_cucumber_expression_parser.py  test_cucumber_expression_tokenizer.py  test_cucumber_expression_transformation.py  test_custom_parameter_type.py  test_expression_factory.py  test_parameter_type_registry.py  test_regular_expression.py  test_tree_regex.py
python/tests/: definitions.py  test_argument.py  test_combinatorial_generated_expression_factory.py  test_cucumber_expression.py  test_cucumber_expression_generator.py  test_cucumber_expression_parser.py  test_cucumber_expression_tokenizer.py  test_cucumber_expression_transformation.py  test_custom_parameter_type.py  test_expression.py  test_expression_factory.py  test_expression_generator.py  test_expression_parser.py  test_expression_tokenizer.py  test_expression_transformation.py  test_parameter_type_registry.py  test_regular_expression.py  test_tree_regex.py
ruby/: .gitignore  .rubocop.yml  .rubocop_todo.yml  Rakefile  cucumber-cucumber-expressions.gemspec
testdata/: migrate.rb
(+452 files in other folders)
