[project]
name = "cucumber-expressions"
version = "18.0.1"
description = "Cucumber Expressions - a simpler alternative to Regular Expressions"
readme = "README.md"
authors = [
    {name = "Jason Allen", email = "jsa34@noreply.github.com"},
]
keywords = ["cucumber", "BDD", "testing", "expressions"]
license = "MIT"
license-files = [
    "LICENSE"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",  # for compatibility with tooling such as pip-licenses",
]

[project.urls]
Homepage = "https://github.com/cucumber/cucumber-expressions"
Repository = "https://github.com/cucumber/cucumber-expressions.git"
Download = "https://pypi.python.org/pypi/cucumber-expressions"
Issues = "https://github.com/cucumber/cucumber-expressions/issues"
Changelog = "https://github.com/cucumber/cucumber-expressions/releases"

[tool.poetry]
packages = [
    { include = "cucumber_expressions"}
]
include = [
    { path = "tests", format = "sdist" }
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pre-commit = "^3.3"
pytest = "^8.0.0"
PyYAML = "^6.0"

[build-system]
requires = ["poetry-core>=2.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
extend-select = [
  "I",
]
