[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.0,<0.10.0"]

[project]
name = "cucumber-expressions"
version = "18.0.1"
description = "Cucumber Expressions - a simpler alternative to Regular Expressions"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Jason Allen", email = "jsa34@noreply.github.com"},
]
keywords = ["cucumber", "BDD", "testing", "expressions"]
license = "MIT"
license-files = [
    "LICENSE"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",  # for compatibility with tooling such as pip-licenses",
]

[project.urls]
Homepage = "https://github.com/cucumber/cucumber-expressions"
Repository = "https://github.com/cucumber/cucumber-expressions.git"
Download = "https://pypi.python.org/pypi/cucumber-expressions"
Issues = "https://github.com/cucumber/cucumber-expressions/issues"
Changelog = "https://github.com/cucumber/cucumber-expressions/releases"

[tool.ruff.lint]
extend-select = [
  "I",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
]
