[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.10.0,<0.11.0"]

[project]
name = "cucumber-expressions"
version = "19.0.0"
description = "Cucumber Expressions - a simpler alternative to Regular Expressions"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Jason Allen", email = "jsa34@noreply.github.com"},
]
keywords = ["cucumber", "BDD", "testing", "expressions"]
license = "MIT"
license-files = [
    "LICENSE"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",  # for compatibility with tooling such as pip-licenses",
]

[project.urls]
Homepage = "https://github.com/cucumber/cucumber-expressions"
Repository = "https://github.com/cucumber/cucumber-expressions.git"
Download = "https://pypi.python.org/pypi/cucumber-expressions"
Issues = "https://github.com/cucumber/cucumber-expressions/issues"
Changelog = "https://github.com/cucumber/cucumber-expressions/releases"

[tool.ruff.lint]
extend-select = [
  "B",
  "C4",
  "COM",
  "FURB",
  "I",
  "ISC",
  "N",
  "PERF",
  "PIE",
  "RET",
  "TID",
  "UP",
]
ignore = [
    "B023",
    "COM812",
    "N818",
    "PERF401",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
]
